# GoogleTestExample

./: CMakeLists.txt  README.md
include/: add.h  sub.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  math_test.cpp
